# LongLive

./: .gitignore  1.md  1_bak.md  README.md  auto_backup_checkpoints.py  command.sh  copy_videos.sh  inference.py  inference_sp.py  requirements.txt  test.py  test_nvfp4.py  train.py
configs/: demo.txt  (+33 more)
fouroversix/: .gitignore  .gitmodules  LICENSE.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
fouroversix/.github/workflows/: _build.yml  pre-commit.yml  publish.yml
fouroversix/docs/: index.md  matmul.md  ptq.md  quantization.md
fouroversix/scripts/: create_test_case.py  generate_kernels.py  hadamard_code_gen.py  resources.py  test_on_modal.py
fouroversix/scripts/ptq/: __main__.py  experiment.py  utils.py
fouroversix/scripts/ptq/coordinators/: __init__.py  base.py  local.py  modal.py
fouroversix/scripts/ptq/evaluators/: __init__.py  awq.py  evaluator.py  gptq.py  high_precision.py  rtn.py  smoothquant.py  spinquant.py  utils.py
fouroversix/scripts/ptq/tasks/wikitext_train/: wikitext_train.yaml
fouroversix/scripts/speedtest/: matmul.py  quantize.py
fouroversix/scripts/train/: __main__.py  prepare_dataset.py
fouroversix/scripts/train/configs/: transformer_1B_bf16.json  transformer_1B_fp4.json  transformer_1B_fp4_fouroversix.json  transformer_340M_bf16.json  transformer_340M_fp4.json  transformer_340M_fp4_fouroversix.json
fouroversix/src/fouroversix/: __init__.py  utils.py
fouroversix/src/fouroversix/csrc/: bindings.cpp  fp4_gemm.cu  fp4_gemm_sm120.cu
fouroversix/src/fouroversix/csrc/include/: element_traits.hpp  fp4_quant.h  fp4_quant_kernel.h  fp4_quant_launch_template.h  hadamard_transform.h  kernel_traits.h  static_switch.h  utils.h
fouroversix/src/fouroversix/csrc/quantize/: fp4_quant.cu  fp4_quant_bf16_mxfp4_rht_sm100.cu  fp4_quant_bf16_mxfp4_rht_trans_sm100.cu  fp4_quant_bf16_mxfp4_sm100.cu  fp4_quant_bf16_mxfp4_trans_sm100.cu  fp4_quant_bf16_nvfp4_rht_sm100.cu  fp4_quant_bf16_nvfp4_rht_trans_sm100.cu  fp4_quant_bf16_nvfp4_sm100.cu  fp4_quant_bf16_nvfp4_trans_sm100.cu  fp4_quant_fp16_mxfp4_rht_sm100.cu  fp4_quant_fp16_mxfp4_rht_trans_sm100.cu  fp4_quant_fp16_mxfp4_sm100.cu  fp4_quant_fp16_mxfp4_trans_sm100.cu  fp4_quant_fp16_nvfp4_rht_sm100.cu  fp4_quant_fp16_nvfp4_rht_trans_sm100.cu  fp4_quant_fp16_nvfp4_sm100.cu  fp4_quant_fp16_nvfp4_trans_sm100.cu
fouroversix/src/fouroversix/matmul/: __init__.py  backend.py  frontend.py  pytorch.py
fouroversix/src/fouroversix/matmul/cutlass/: __init__.py  backend.py  ops.py
fouroversix/src/fouroversix/model/: __init__.py  config.py  quantize.py
fouroversix/src/fouroversix/model/modules/: __init__.py  gpt_oss.py  linear.py  linear_ori.py  qwen.py
fouroversix/src/fouroversix/quantize/: __init__.py  backend.py  config.py  frontend.py  quantized_tensor.py  transformer_engine.py  utils.py
fouroversix/src/fouroversix/quantize/cuda/: __init__.py  backend.py  ops.py
fouroversix/src/fouroversix/quantize/pytorch/: __init__.py  backend.py  reference.py
fouroversix/src/fouroversix/weight_conversions/: __init__.py  conversions.py  gpt_oss.py
fouroversix/tests/: test_correctness.py
(+148 files in other folders)
